# compiler

./: Block.cpp  Block.h  CMakeLists.txt  CalculateExpression.cpp  CalculateExpression.h  Errors.h  Expression.cpp  Expression.h  Generator.cpp  Generator.h  Optimizator.cpp  Optimizator.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Symbol.cpp  Symbol.h  TypeChecker.cpp  TypeChecker.h  main.cpp
tests/: insertTest.py  reenumTest.py  start.py  test000.out  test001.in  test001.out  test002.out  test003.in  test003.out  test005.out  test006.in  test006.out  test007.in  test008.in  test010.in  test011.out  test012.out  test013.in  test013.out  test014.in  test015.in  test016.out  test017.in  test017.out  test019.out  test020.in  test020.out  test021.in  test022.in  test023.out  test024.out  test025.in  test026.in  test026.out  test027.out  test028.in  test028.out  test029.in  test029.out  test032.in
tests/testBlocksError/: start.py  test000.out  test001.in  test001.out  test002.in  test002.out  test003.in  test003.out  test004.in  test004.out  test005.in  test005.out  test006.in  test006.out  test007.in  test007.out  test008.in  test008.out  test009.in  test009.out  test010.in  test010.out  test011.in  test011.out  test012.in  test012.out  test013.out  test014.in  test014.out  test015.in  test015.out  test016.in  test016.out  test017.in  test017.out  test018.in  test018.out  test019.out
tests/testDeclarationsError/: start.py  test000.in  test000.out  test001.in  test001.out  test003.out  test004.out  test005.out  test006.out  test007.out  test008.out  test009.in  (+44 more)
(+623 files in other folders)
